Fix spacing between rows in the photo grid

--- a/css/main.scss
+++ b/css/main.scss
@@ -501,6 +501,10 @@ body {
 	color: transparent;
 }
 
+.picture-grid .row {
+	margin-bottom: 24px;
+}
+
 img {
 	margin: 0 auto;
 }
